--- a/assets/css/pages/_home.scss
+++ b/assets/css/pages/_home.scss
@@ -11,7 +11,7 @@
 
 .important-info{text-align: left;}
 .important-info h2{margin-bottom: 40px;}
-.important-info p{text-align: center;}
+//.important-info p{text-align: center;}
 
 }
 
